--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 	  <%= stylesheet_link_tag('application') %>
     <%= javascript_include_tag :defaults %>
-
+    <%= javascript_include_tag(:application)%>
 	</head>
 	<body>
 
@@ -33,6 +33,7 @@
         <li><a href="#">Option</a></li>
       </ul>
     </div>
+  <%= params %>
 
 		<!--Before yield -->
       <% if !flash[:notice].blank? %>
