--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,9 +33,9 @@
         <li><a href="#">Option</a></li>
       </ul>
     </div>
-  <%# params %>
 
 		<!--Before yield -->
+    <%= params %>
       <% if !flash[:notice].blank? %>
         <div class="notice">
           <%= flash[:notice] %>
