--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -30,6 +30,11 @@
                 });
             </script></td>
 
+             <tr>
+              <th><%= f.label(:Notes, "Comments") %></th>
+              <td><%= f.text_area(:Notes, :side => '40x10') %></td>
+            </tr>
+
             <td class="letter-attach">
                 <%= f.file_field :letter %>
 
