--- a/app/views/praxis_results/index.html.erb
+++ b/app/views/praxis_results/index.html.erb
@@ -2,7 +2,7 @@
 <%= link_to("<< Back", students_path, {:class => 'back-link'}) %>
 <div class="index">
 
-  <table class="listing" summary="praxis list">
+  <table class="listing table table-striped" summary="praxis list">
     <caption>   
       <h2>Praxis Results for <%= "#{@student.FirstName} #{@student.LastName}"%></h2>
 
