--- a/ParkingLot/test_details.html.erb
+++ b/ParkingLot/test_details.html.erb
@@ -1,5 +1,7 @@
+<%= link_to students_path(@student.Bnum), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
 
-<%= link_to("<< Back", students_path(@student.Bnum), :class => 'back-link') %>
 
 <div class="test details show">
 
