--- a/app/views/adm_tep/edit.html.erb
+++ b/app/views/adm_tep/edit.html.erb
@@ -1,5 +1,7 @@
-<div class="adm_tep edit">
-    <%= link_to("<< Back", adm_tep_index_path, html: {multipart: true},  :class => 'back-link') %>
+<%= link_to adm_tep_index_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
     
     <%= form_for(:adm_tep, :url => adm_tep_path(@application.AltID), method: :patch ) do |f| %>
 
