--- a/app/views/adm_tep/new.html.erb
+++ b/app/views/adm_tep/new.html.erb
@@ -1,4 +1,7 @@
-<%= link_to("<< Back", adm_tep_index_path, :class => 'back-link') %>
+<%= link_to adm_tep_index_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
 
 <div class="issue new">
 
