--- a/app/views/issue_updates/index.html.erb
+++ b/app/views/issue_updates/index.html.erb
@@ -1,7 +1,10 @@
 issueupdates#index!
 <%= params %>
 
-<%= link_to("<< Back", student_issues_path(@issue.IssueID), :class => 'back-link') %>
+<%= link_to student_issues_path(@issue.IssueID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
 <div class="index">
 
   <table class="listing" summary="praxis list">
