--- a/app/views/issue_updates/new.html.erb
+++ b/app/views/issue_updates/new.html.erb
@@ -1,4 +1,6 @@
-<%= link_to("<< Back", student_issues_path(@student.AltID), :class => 'back-link') %>
+<%= link_to student_issues_path(@student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
 
 <div class="issue new">
 
