--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,6 +1,7 @@
-<%= link_to("<< Back", students_path, :class => 'back-link') %>
-<div class="index">
-      
+<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
     </br>
 
 
