--- a/app/views/praxis_results/show.html.erb
+++ b/app/views/praxis_results/show.html.erb
@@ -1,5 +1,8 @@
 
-<%= link_to("<< Back", student_praxis_results_path(@student.AltID), :class => 'back-link') %>
+<%= link_to student_praxis_results_path(@student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+  <i class=" link-text"> Back</i>
+<% end %>
+
 
 <div class="test details show">
 
