--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -173,31 +173,54 @@ sup {
 a { text-decoration: none; }
 a:hover { text-decoration: underline; }
 
-/* large action buttons */
-a.action {  padding: 2px 5px; 
-  background: #94B26F; color: #4C2516;  border: 1px solid #4C2516;
-  text-decoration: none; font-size: 0.8em; text-align: center; }
-a.action:hover { background: #B6D491; }
 
-a.large_action {padding: 2px 5px; 
-  background: #94B26F; color: #4C2516;  border: 1px solid #4C2516;
-  text-decoration: none; font-size: 14pt; text-align: center; font-weight: normal;
-}
+/*old school action buttons*/
+    /* large action buttons */
+/*    a.action {  padding: 2px 5px; 
+      background: #94B26F; color: #4C2516;  border: 1px solid #4C2516;
+      text-decoration: none; font-size: 0.8em; text-align: center; }
+    a.action:hover { background: #B6D491; }
 
-/* small action buttons */
-.actions a.action { float: left; 
-  padding: 1px 2px; margin: 2px 5px; font-size: 12pt; }
+    a.large_action {padding: 2px 5px; 
+      background: #94B26F; color: #4C2516;  border: 1px solid #4C2516;
+      text-decoration: none; font-size: 14pt; text-align: center; font-weight: normal;
+    }
 
-.actions a.praxis_results  {min-width: 140px }
-.actions a.issues  {min-width: 90px }
+    /* small action buttons */
+/*    .actions a.action { float: left; 
+      padding: 1px 2px; margin: 2px 5px; font-size: 12pt; }
 
-/*file download button*/
+    .actions a.praxis_results  {min-width: 140px }
+    .actions a.issues  {min-width: 90px }*/
 
-td.doc-download {
-  border: 0px;
-}
+/*new action buttons*/
+
+    .action-small {
+      font-size: 12pt;
+      color: black;
+    }
+    .action-small:visited {
+      color: inherit;
+    }
+    .action-small.praxis {
+      min-width: 160px;
+    }    
+
+    .action-small.issues {
+      min-width: 85px;
+    }    
+
+    .action-small.glyphicon {
+      font-size: 14px;
+    }
 
 
+
+
+
+    .small-btn-text {
+      font-family: Verdana,Lucida,Arial,Helvetica,sans-serif; 
+    }
 
 div.form_link {font-size: 0pt;}
 
