--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -23,11 +23,19 @@
 	  <td><%= student.ProgStatus %></td>
     <td class="actions">
 
-        <%= link_to("Details", student_path(student.AltID), {:class => "action details"}) %>
+        <%= link_to student_path(student.AltID), :class => "btn btn-info action-small" do %>
+              </br><span class="small-btn-text">Details</span>
+            <% end %>
 
-        <%= link_to("Praxis Results (#{student.praxis_results.size})", student_praxis_results_path(student.AltID), {:class => "action praxis_results"}) %>
+        <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" do %>
+              </br><span class="small-btn-text"><%="Praxis Results (#{student.praxis_results.size})"%></span>
+            <% end %>
 
-        <%= link_to("Issues (#{student.issues.size})", student_issues_path(student.AltID), {:class => "action issues"}) %>
+        <%= link_to student_issues_path(student.AltID),:class => "btn btn-info action-small issues" do %>
+              </br><span class="small-btn-text"><%="Issues (#{student.issues.size})"%></span>
+            <% end %>
+
+
 
     	  <!-- action buttons to do more with an individual student:
     	  		see praxis scores
