--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <li><%= link_to("TEP Applications", 
         banner_term_adm_tep_index_path(current_term(exact=false).BannerTerm)
         ) %></li>
-        <li><a href="#">Option</a></li>
+        <li><%= link_to("New Praxis Registration", new_praxis_result_path) %></li>
         <li><a href="#">Option</a></li>
         <li><a href="#">Option</a></li>
         <li><a href="#">Option</a></li>
