--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,7 +5,7 @@
 
   <table class="listing table table-striped" summary="Student list">
     <caption>
-      <h2>Students (<%= @students.size %> found) </div> </h2>     
+      <h2>Students (<%= @students.size %> found) </h2>     
     </caption>
     <tr class="header">
       <th>B#</th>
