--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -1,57 +1,67 @@
 
-<%= link_to students_path, class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
+<%= link_to student_issues_path(@student.AltID), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
 
-<div class="index">
-      <h2>Issues for <%= "#{@first_name} #{@last_name}"%></h2>
+<table class="vertical-table">
+  <caption>
+    
+    <div class="header1">
+      <%= "#{@first_name} #{@last_name}"%>
+    </div>
 
+    <div class="header2">
+      <%= @issue.Name %>
+    </div>
+  </caption>
 
+  <tr>
+    <th>Date Opened</th>
+    <td> <%= @issue.CreateDate.strftime("%m/%d/%Y")%></td>
+  </tr>
 
-      <div class="issue_header"> <%= pluralize(@student.issues.size, 'issue') %>  found
-      <%= link_to(image_tag('plus_sign.png', :size => '11x11', :alt => '+') + " Open New Issue", {:action => 'new', :id => @student.Bnum}, :class => 'large_action issue_new new') %>
+  <tr>
+    <th>Status</th>
+      <td class="<%= @issue.Open ? "bad_text" : "good_text" %>">
+        <!-- glyh here if open -->
+        <% if @issue.Open %>
+
+            <div class="col-md-1">
+              <span class="glyphicon glyphicon-exclamation-sign"></span>
+            </div>
+
+            <div class="col-md-1">
+              Open
+            </div>
+
+        <% else %>
+            <div class="col-md-1" id="glyph-no-space">
+              <span class="glyphicon glyphicon-ok"></span>
+            </div>
+
+            <div class="col-md-1" id="text-no-space">
+              Resolved
+            </div>
+        <% end #end of status conditional %>
+
+      </td>
+  </tr>
+
+  <tr >
+    <th>Issue Desription</th>
+    <td class="wrap"><%= @issue.Description %></td>
+  </tr>
+
+  <tr>
+    <td class="actions" colspan="2">
+      <div class="btn btn-info">
+        <%= link_to("Updates (#{@issue.issue_updates.size})", issue_issue_updates_path(@issue.IssueID), :class => 'action-small') %> 
       </div>
 
-    </br>
+    </td>
+  </tr>
 
-    <% if @student.issues.size > 0 %>
 
-        <% @student.issues.sorted.each do |issue| %>
-          <table summary="Student detail view">
+</table>
 
-            <tr>
-              <th>Issue Name</th>
-              <td><%= issue.Name %></td>
-            </tr>
 
-            <tr>
-              <th>Status</th>
-              <td class="<%= issue.Open ? "bad_text" : "good_text" %>"><%= issue.Open ? "open" : "closed" %>
-              </td>
-            </tr>
-
-            <tr>
-              <th>Date Opened</th>
-              <td><%= issue.CreateDate.strftime("%m/%d/%Y")%> </td>
-            </tr>
-
-            <tr>
-              <th></th>
-              <td><%= link_to("Updates (#{issue.issue_updates.size})", issue_issue_updates_path(issue.IssueID), :class => 'action show') %> 
-              <% if issue.Open %>
-                  <%= link_to("Close issue", resolve_issue_issue_issue_updates_path(issue.IssueID), :class => "action edit") %>
-              <% end %>
-              </td>
-
-            </tr>
-          </table>
-
-          <p class="issue_discrip">
-
-          <%= issue.Description %>
-          </p>
-          <% end %>
-
-    <% end %>
-
-</div>
