--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -23,16 +23,22 @@
 	  <td><%= student.ProgStatus %></td>
     <td class="actions">
 
+    
         <%= link_to student_path(student.AltID), :class => "btn btn-info action-small" do %>
               </br><span class="small-btn-text">Details</span>
             <% end %>
 
+
+          <!-- TODO grayed out button if no praxis results, issues -->
         <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" do %>
-              </br><span class="small-btn-text"><%="Praxis Results (#{student.praxis_results.size})"%></span>
+                </br><span class="small-btn-text"><%="Praxis Results (#{student.praxis_results.size})"%></span>
+
             <% end %>
+
 
         <%= link_to student_issues_path(student.AltID),:class => "btn btn-info action-small issues" do %>
               </br><span class="small-btn-text"><%="Issues (#{student.issues.size})"%></span>
+
             <% end %>
 
 
